# automodeldocs

./: README.md  docker-compose.yml  pyproject.toml
automodeldocs/: __init__.py  definitions.py  explorer.py  fan_cache.py  format_cache.py  structures.py  utils.py  writer.py
automodeldocs/chat/: cache.py  send_message.py
automodeldocs/config/: llm_config.py
automodeldocs/describe/: cache.py  class_report_prompt.py  class_scratch_prompt.py  formatter.py  function_report_prompt.py  function_scratch_prompt.py
automodeldocs/evaluator/: parser.py  prompt.py
automodeldocs/response/: formatted.py
automodeldocs/shared_prompts/: response_format.py
examples/end_to_end/: simple.py  tabpfn_example.py  torch_forecasting.py
examples/parameter_identification/: lightgbm.py  naive_perceptron.py  simple_attention.py  tensorflow.py
test_prompts/: test_function_explanation.py  test_module_explanation.py
tests/: conftest.py  test_cache.py  test_vector_db.py
